--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,18 @@
 .vscode/ipch/b2247eea95081a9a/mmap_address.bin
 .vscode/ipch/b2247eea95081a9a/helper.ipch
 main
+.vscode/ipch/26cbdf9d428277b0/bitmap.ipch
+.vscode/ipch/26cbdf9d428277b0/mmap_address.bin
+.vscode/ipch/f1225ffc634a386f/mmap_address.bin
+.vscode/ipch/7e116f7036bcf6d2/http.ipch
+.vscode/ipch/7e116f7036bcf6d2/mmap_address.bin
+.vscode/ipch/8f00435c6723895a/image.ipch
+.vscode/ipch/8f00435c6723895a/mmap_address.bin
+.vscode/ipch/a6a05728095a8315/global.ipch
+.vscode/ipch/a6a05728095a8315/mmap_address.bin
+.vscode/ipch/c5d01dc497af9bbf/mmap_address.bin
+.vscode/ipch/cf8dd14537791229/mmap_address.bin
+.vscode/ipch/f1225ffc634a386f/http.ipch
+.vscode/ipch/ff37ee3b9923a981/mmap_address.bin
+output.gif
+http
