Add current frame via http interface.

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,8 @@ main
 .vscode/ipch/ff37ee3b9923a981/mmap_address.bin
 output.gif
 http
+global
+output.gif
+.vscode/ipch/c2137ca046f28b8c/mmap_address.bin
+output.gif
+output.gif
